# project

./: .coverage  README.md  medical_data.json  pyproject.toml
data/lab04/: input.txt  report.csv  report_a.csv  report_b.csv
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv
data/samples/: cities.csv  people.csv  people.csv1  people.json  people.json1  sample.txt
scr/lab01/: 02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06_in_person_in_absentia.py
scr/lab02/: 01_arrays.py  02_matrix.py  03-tuples.py
scr/lab03/: README.md  text1_stats.py  text_stats.py
scr/lab04/: io_txt_csv.py  text_report.py
scr/lab05/: __init__.py  csv_xlsx.py  json_csv.py
scr/lab06/: cli_convert.py  cli_text.py  commands.txt
scr/lab07/: README.md  commands.txt
scr/lab09/: commands.txt  group.py
scr/lab10/: commands.txt  linked_list.py  structures.py
scr/lab11/: README.md  validate.py
scr/lab12/: README.md  collection.py  demo.py  model.py
scr/lab13/: README.md  base.py  demo.py  models.py
scr/lab14/: README.md  base.py  demo.py  models.py
scr/lab15/: README.md  demo.py  strategies.py
scr/lab16/: README.md  base.py  collection.py  container.py  demo.py  models.py
scr/lab17/: README.md  app.py  base.py  cli.py  collection.py  examples.txt  exceptions.py  interfaces.py  main.py  models.py  storage.py
scr/lib/: io_helpers.py  text.py  text1.py
scr/lib/lab08/: README.md  commands.txt  models.py  serialize.py
scr/lib/lab11/: demo.py  model.py
tests/: test_json_csv.py  test_text.py
